Bug 88211 - [PATCH]Synaptics touchpad LEN2006 wrong min max values
Summary: [PATCH]Synaptics touchpad LEN2006 wrong min max values
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_input-devices
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-14 10:30 UTC by bensagal
Modified: 2016-11-13 13:02 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.17.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Patch to fix min max values (439 bytes, patch)
2014-11-14 10:30 UTC, bensagal
Details | Diff
patch with signed off (846 bytes, patch)
2014-11-15 21:02 UTC, bensagal
Details | Diff

Description bensagal 2014-11-14 10:30:13 UTC
Created attachment 157571 [details]
Patch to fix min max values

The LEN2006 Synaptics touchpad (as found in my thinkpad E540) is returning wrong min  max values.

I have the following touchpad-edge-detector values:

Touchpad SynPS/2 Synaptics TouchPad on /dev/input/event6
Move one finger around the touchpad to detect the actual edges
Kernel says:    x [1472..5674], y [1408..4684]
Touchpad sends: x [1264..5675], y [1171..4688]

I have attached a patch which fixes the problem for me.
Comment 1 Dmitry Torokhov 2014-11-15 20:32:52 UTC
Could you please add your signed-off-by to rhe patch, as documented in Documentation/SubmittingPatches, and post your patch to linux-input@vger.kernel.org cc dmitry.torokhov@gmail.com and I will apply it.

Thanks!
Comment 2 bensagal 2014-11-15 21:02:35 UTC
Created attachment 157791 [details]
patch with signed off
Comment 3 bensagal 2015-04-13 11:19:03 UTC
For reference full details of the touchpad in my E540:

Touchpad model: 1
fw: 8.1
id: 0x1e2b1
caps: 0xd001a3/0x940300/0x12f800
board id: 2964
fw id: 2560
Comment 4 Dmitry Torokhov 2015-04-15 00:26:43 UTC
Could you please try just released 4.0? I believe the your touchpad should be properly handled by it.
Comment 5 Marcos Souza 2016-11-13 02:20:52 UTC
This patch was accepted back in 2014, hash ==
bce4f9e764c36bc35dd5c9cf9e057c09f422397d

This bug can be closed.

Note You need to log in before you can comment on or make changes to this bug.